--- a/index.html
+++ b/index.html
@@ -1,16 +1,71 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
-  </head>
-  <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
-  </body>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Instagram Clone</title>
+        <link rel="stylesheet" href="">
+        <meta name="description" content="">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="./styles/style.css">
+    </head>
+    <body>
+        <div class="background">
+
+        </div>
+        <section>
+
+            <div class="phones">
+                <img src="./images/phones.png" alt="phones">
+            </div>
+            <div class="container">
+                <header>
+                    <div class="logo">
+                        <img src="./images/brand.png" alt="Insta Logo">
+                    </div>
+                    <div class="home">
+                        <button><img src="./images/home.png" alt="Log In">
+                        <p>Log In</p>
+                        </button>
+                    </div>
+                </header>
+                <div class="text">
+                    <h2>
+                    Capture and Share <br />
+                    the World's Moments
+                    </h2>
+                    <p>
+                        Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong>  way to share your life with
+                        friends and family.
+                      </p>
+                      <p>
+                        Take a picture or video, choose a filter to transform its look and
+                        feel, then post to Instagram &mdash; it's that easy. You can even
+                        share to Facebook, Twitter, Tumblr and more. It's a new way to see
+                        the world.
+                      </p>
+                      <p>Oh yeah, did we mention it's free?</p>
+                      <div class="badge">
+                            <img src="./images/badge-iphone.png" alt="iphone">
+                            <img src="./images/badge-android.png" alt="android">
+                      </div>
+                </div>
+            </div>
+        </section>
+        <footer>
+            <ul>
+              <li>About Us</li>
+              <li>Support</li>
+              <li>Blog</li>
+              <li>Press</li>
+              <li>API</li>
+              <li>Jobs</li>
+              <li>Privacy</li>
+              <li>Terms</li>
+              <li class="instagram">2014 Instagram</li>
+            </ul>
+          </footer>
+        
+        
+    </body>
 </html>
